@@ -9,14 +9,15 @@ CheckSum Tool 0.7.0
   Require VS 2010 (Express) or SharpDevelop 4.0
   Add #if for including unit tests only for debug builds
   Don't hide Maximize button in application main window
-  Fix crash when adding lots of files (#2951908)
   Add progress dialog
   Update copyrights to 2011
-  Fix bug that Calculate-toolbar button was not disabled when processing items
   Disable Exit-item in File-menu when processing items
   Center About-dialog to main window
   Add View-menu items to select which kind of items to show
   Show progress at taskbar icon in Windows 7
+  Bugfix: Fix crash when adding lots of files (#2951908)
+  Bugfix: Calculate-toolbar button was not disabled when processing items
+  Bugfix: Changing sum type cleared calculated sums without warning
 
 CheckSum Tool 0.6.0 - 2009-05-07 (r269)
   Split code to two additional libraries (SumLib and Utils).
